--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-telethon
-cryptg
-psutil
-asyncio
-speedtest-cli
-aiohttp
-yt-dlp
+telethon==1.38.1
+cryptg==0.5.0.post0
+psutil==6.1.0
+asyncio==3.4.3
+speedtest-cli==2.1.3
+aiohttp==3.11.7
+yt-dlp==2024.11.18
